# qfreerdp_platform

./: .gitignore  .qmake.conf  README.md  meson.build  meson_options.txt  qfreerdp.pro
.github/workflows/: ci-github.yml
applications/: applications.pro
applications/greeter/: greeter.cpp  greeter.h  greeter.pro  greeter.qrc  main.cpp
applications/greeter/forms/: greeter.ui
ci/: qfreerdp_platform.accendino
src/: meson.build  src.pro
src/plugins/: plugins.pro
src/wmwidgets/: meson.build  wmcontainer.cpp  wmcontainer.h  wmiconbutton.cpp  wmiconbutton.h  wmlabel.cpp  wmlabel.h  wmspacer.cpp  wmspacer.h  wmwidget.cpp  wmwidget.h  wmwidgets.pro
src/wmwidgetsTests/: meson.build  wmwidgetsTests.cpp  wmwidgetsTests.pro  wmwidgetsTests.qrc
xkb/: meson.build
xkb/rules/: qfreerdp  rubycat
xkb/symbols/: rubycat_be_windows  rubycat_fr_windows  rubycat_gb_windows  rubycat_latam_windows  rubycat_latin
xkb/types/: qfreerdp_lvl3_ctrlalt
xkbsymbols/: rubycat_be_windows  rubycat_fr_windows  rubycat_gb_windows  rubycat_latam_windows
