option('tests', type: 'feature', value: 'enabled', description: 'build unitary tests')

option('global_install', type: 'boolean', value: true, description: 'install the QPA in the global Qt plugins directory')

option('qt_version', type: 'combo', choices : ['auto', 'qt5', 'qt6'], value: 'auto', description: 'Major Qt version to target. Autodetect will prioritise Qt6')
